fixed submenu caret spacing and current page menu active color

--- a/style.css
+++ b/style.css
@@ -2136,6 +2136,35 @@ li.default-menu {
 
 /* =DROP DOWN
 ----------------------------------------------- */
+
+.main-navigation ul li .sub-toggle {
+    position: absolute;
+    top: 50%;
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+    margin-left: 5px;
+    margin-top: 4px;
+}
+
+.main-navigation ul li >ul .sub-toggle {
+	margin: 0;
+	right: 10px;
+}
+
+.main-navigation ul li.current-menu-item > .sub-toggle,
+.main-navigation ul li.current_page_ancestor > .sub-toggle,
+.main-navigation ul li.current-menu-ancestor > .sub-toggle,
+.main-navigation ul li.current_page_item > .sub-toggle { 
+	color: #0FBE7C;
+}
+
+.main-navigation ul li ul li.current-menu-item > a,
+.main-navigation ul li ul li.current-menu-ancestor > a {
+     color: #0FBE7C;
+}
+
+
 /* =SMALL MENU
 ----------------------------------------------- */
 .menu-toggle {
